tests/invalid/tuple_comparison_ordering/main.py
def run_case() -> None:
    a: tuple[int, int] = (1, 2)

    b: tuple[int, int] = (3, 4)

    c: bool = a < b

if __name__ == "__main__":
    run_case()
